<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
android:id="@+id/ScrollView01" android:layout_width="fill_parent"
android:layout_height="fill_parent" >
<RelativeLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:soundEffectsEnabled="true" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:hint="@string/edit_message" />

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_message"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:hint="@string/edit_height"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_height"
        android:layout_alignRight="@+id/edit_height"
        android:layout_below="@+id/edit_height"
        android:layout_marginTop="30dp"
        android:ems="15"
        android:hint="@string/edit_weight"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="displayAbout"
        android:text="@string/about_bmi" />

    

</RelativeLayout></ScrollView>